fixed spacing issues

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,10 +1,15 @@
 /* --Music Player Outline-- */
 
+* {
+  box-sizing: border-box;
+}
+
 /*Global styling top to bottom*/
 body {
     margin: 0;
     font-family: Verdana;
     background: black;
+    overflow-x: hidden;
 }
 
 /*Styling for site name, search bar, and profile + settings icons*/
@@ -18,6 +23,10 @@ header {
 
 #searchButton{
     margin-left: -40px;
+}
+
+#searchBar{
+    height: 40px;
 }
 
 #searchSuggestions {
